[package]
name = "sandy-image"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.69"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.69", features = ["console"] }
